; ModuleID = '/home/carl/AnghaBench/lede/package/kernel/hwmon-gsc/src/extr_gsc.c_gsp_read.c'
source_filename = "/home/carl/AnghaBench/lede/package/kernel/hwmon-gsc/src/extr_gsc.c_gsp_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }

@GSP_REG_TEMP_IN = common dso_local global i64 0, align 8
@GSP_REG_CURRENT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_client*, i64)* @gsp_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gsp_read(%struct.i2c_client* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.i2c_client*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.i2c_client* %0, %struct.i2c_client** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 0, i32* %6, align 4
  %7 = load i64, i64* %5, align 8
  %8 = load i64, i64* @GSP_REG_TEMP_IN, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %14, label %10

10:                                               ; preds = %2
  %11 = load i64, i64* %5, align 8
  %12 = load i64, i64* @GSP_REG_CURRENT, align 8
  %13 = icmp sgt i64 %11, %12
  br i1 %13, label %14, label %28

14:                                               ; preds = %10, %2
  %15 = load %struct.i2c_client*, %struct.i2c_client** %4, align 8
  %16 = load i64, i64* %5, align 8
  %17 = call i32 @i2c_smbus_read_byte_data(%struct.i2c_client* %15, i64 %16)
  %18 = load i32, i32* %6, align 4
  %19 = or i32 %18, %17
  store i32 %19, i32* %6, align 4
  %20 = load %struct.i2c_client*, %struct.i2c_client** %4, align 8
  %21 = load i64, i64* %5, align 8
  %22 = add nsw i64 %21, 1
  %23 = call i32 @i2c_smbus_read_byte_data(%struct.i2c_client* %20, i64 %22)
  %24 = shl i32 %23, 8
  %25 = load i32, i32* %6, align 4
  %26 = or i32 %25, %24
  store i32 %26, i32* %6, align 4
  %27 = load i32, i32* %6, align 4
  store i32 %27, i32* %3, align 4
  br label %49

28:                                               ; preds = %10
  %29 = load %struct.i2c_client*, %struct.i2c_client** %4, align 8
  %30 = load i64, i64* %5, align 8
  %31 = call i32 @i2c_smbus_read_byte_data(%struct.i2c_client* %29, i64 %30)
  %32 = load i32, i32* %6, align 4
  %33 = or i32 %32, %31
  store i32 %33, i32* %6, align 4
  %34 = load %struct.i2c_client*, %struct.i2c_client** %4, align 8
  %35 = load i64, i64* %5, align 8
  %36 = add nsw i64 %35, 1
  %37 = call i32 @i2c_smbus_read_byte_data(%struct.i2c_client* %34, i64 %36)
  %38 = shl i32 %37, 8
  %39 = load i32, i32* %6, align 4
  %40 = or i32 %39, %38
  store i32 %40, i32* %6, align 4
  %41 = load %struct.i2c_client*, %struct.i2c_client** %4, align 8
  %42 = load i64, i64* %5, align 8
  %43 = add nsw i64 %42, 2
  %44 = call i32 @i2c_smbus_read_byte_data(%struct.i2c_client* %41, i64 %43)
  %45 = shl i32 %44, 16
  %46 = load i32, i32* %6, align 4
  %47 = or i32 %46, %45
  store i32 %47, i32* %6, align 4
  %48 = load i32, i32* %6, align 4
  store i32 %48, i32* %3, align 4
  br label %49

49:                                               ; preds = %28, %14
  %50 = load i32, i32* %3, align 4
  ret i32 %50
}

declare dso_local i32 @i2c_smbus_read_byte_data(%struct.i2c_client*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
